# app-qtum

./: Makefile
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  lint-workflow.yml
fuzzing/: .gitignore  CMakeLists.txt  fuzz_qtum.c  os_mocks.c  ux.h
src/ui/: display.c  display.h  display_nbgl.c
